--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -12,7 +12,7 @@
     "react/react-in-jsx-scope": 0,
     "react/prop-types": 0
   },
-  "plugins": ["react", "react-hooks", "import"],
+  "plugins": ["react", "react-hooks", "import", "testing-library", "jest-dom"],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
@@ -23,6 +23,7 @@
   "env": {
     "es6": true,
     "browser": true,
-    "node": true
+    "node": true,
+    "jest": true
   }
 }
