--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel src/index.html"
+    "dev": "parcel src/index.html --no-cache",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -19,11 +20,20 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
     "buffer": "^6.0.3",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
+    "jest": "^29.7.0",
+    "jest-dom": "^4.0.0",
+    "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.11.0",
     "prettier": "^3.2.5",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "react-scripts": "^5.0.1"
   }
 }
